修改，，，，页面查看APP上传的用户信息